--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>James Bumanlag - Portfolio</title>
     <style>
         body, html {
             height: 100%;
@@ -66,15 +66,15 @@
             <h2>About Me</h2>
             <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
             <p>
-                A brief paragraph about yourself, your background, skills, and experience.
+                Aspiring Web Developer currently learning in Learn Computer Today
             </p>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Project 1</a>: Short description of the project.</li>
-                <li><a href="#">Project 2</a>: Short description of another project.</li>
+                <li><a href="#">Project 1</a>: My Portfolio Website</li>
+                <li><a href="#">Project 2</a>: Project HTML and CSS </li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
@@ -82,12 +82,12 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                How to reach you: Email, LinkedIn, GitHub, etc.
+                How to reach you: GitHub, Gmail
             </p>
         </section>
 
         <footer>
-            <p>© 2023 by Your Name</p>
+            <p>© 2024 by James Bumanlag</p>
         </footer>
     </div>
 </body>
