--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
+            <img src="james.png" alt="Your Name's Profile Picture" class="profile-pic">
             <p>
                 Aspiring Web Developer currently learning in Learn Computer Today
             </p>
