--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Project 1</a>: My Portfolio Website</li>
-                <li><a href="#">Project 2</a>: Project HTML and CSS </li>
+                <li><a href="https://github.com/jamesbumanlag/portfolio">Project 1</a>: My Portfolio Website</li>
+                <li><a href="https://github.com/jamesbumanlag/Gelos-Enterprises---Login-System">Project 2</a>: Project HTML and CSS </li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
