--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="https://github.com/jamesbumanlag/portfolio">Project 1</a>: </li>
+                <li><a href="https://github.com/jamesbumanlag/portfolio">Project 1</a>: My Portfolio Website </li>
                 <li><a href="https://github.com/jamesbumanlag/Gelos-Enterprises---Login-System">Project 2</a>: Login Project in Tafe NSW </li>
                 <!-- Add more projects as list items -->
             </ul>
