--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <h2>Projects</h2>
             <ul>
                 <li><a href="https://github.com/jamesbumanlag/portfolio">Project 1</a>: My Website Portfolio</li>
+                <li><a href="https://jamesbumanlag.github.io/portfolio/">Website Link</a></li>
                 <li><a href="https://github.com/jamesbumanlag/Gelos-Enterprises---Login-System">Project 2</a>: Project HTML and CSS </li>
                 <!-- Add more projects as list items -->
             </ul>
