--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         <ul>
             <li>
                 <a href="https://github.com/jamesbumanlag/portfolio">Project 1</a>: My Website Portfolio
-                <ul>
-                    <li><a href="https://jamesbumanlag.github.io/portfolio/">Website Link</a></li>
-                </ul>
+            </li> 
+            <li>
+                <a href="https://jamesbumanlag.github.io/portfolio/">Website Link</a></li>
+                
             </li>
             <li>
                 <a href="https://github.com/jamesbumanlag/Gelos-Enterprises---Login-System">Project 2</a>: Project HTML and CSS
