--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="https://github.com/jamesbumanlag/portfolio">Project 1</a>: My Website Portfolio
             </li> 
             <li>
-                <a href="https://jamesbumanlag.github.io/portfolio/">Website Link</a></li>
+                <a href="https://jamesbumanlag.github.io/portfolio/">Website Link</a>
                 
             </li>
             <li>
